--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,9 +1,12 @@
+.main-nav {
+  .mp;
+}
 .main-nav__list {
   display: block;
   list-style: none;
 
   @media (min-width: @tablet-width) {
-    min-width: 444px;
+    min-width: 440px;
     display: flex;
     justify-content: space-between;
   }
