--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -5,8 +5,11 @@
 
 .page-footer__wrapper {
   width: 320px;
+  box-sizing: border-box;
   margin: 0 auto;
+  padding: 0 20px;
   display: block;
+
 
   @media (min-width: @tablet-width) {
     width: 708px;
@@ -21,13 +24,17 @@
   }
 }
 
-.partnership__map-wrapper {
+.page-footer__map-wrapper {
   width: 100vw;
+  height: 362px;
 }
 
 .page-footer__logo {
   display: block;
   .ma;
-  height: 25px;
-  width: 129px;
+  height: 24px;
+  width: 128px;
+  padding-top: 40px;
+  padding-bottom: 30px;
+
 }
