--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -4,6 +4,8 @@
 
   @media (min-width: @tablet-width) {
     width: 768px;
+    box-sizing: border-box;
+    padding: 0 30px;
     display: flex;
     justify-content: space-between;
   }
@@ -19,13 +21,22 @@
   display: flex;
   justify-content: space-between;
   padding: 0 20px;
+  min-height: 66px;
+  align-items: center;
+
+  @media (min-width: @tablet-width) {
+    min-height: 110px;
+
+  }
 }
 
 .page-header__nav-wrapper {
   display: none;
 
   @media (min-width: @tablet-width) {
-    display: block;
+    display: flex;
+    align-items: center;
+
   }
 }
 
@@ -44,4 +55,14 @@
   background-image: url("../img/mobile-menu-open.png");
   width: 24px;
   height: 18px;
+}
+.page-header__logo {
+  margin-left: -10px;
+  width: 101px;
+  height: 18px;
+}
+.page-header__icon {
+  width: 33px;
+  height: 38px;
+  margin-top: -5px;
 }
