--- a/source/less/blocks/partnership.less
+++ b/source/less/blocks/partnership.less
@@ -7,8 +7,10 @@
   justify-content: space-between;
   width: 320px;
   padding: 0 20px;
+  box-sizing: border-box;
   .ma;
-
+  padding-top: 28px;
+  padding-bottom: 26px;
   @media (min-width: @tablet-width) {
     width: 708px;
     padding: 0 30px;
@@ -26,7 +28,8 @@
   color: black;
   font-size: 16px;
   line-height: 20px;
-
+  .mp;
+  width: 140px;
   @media (min-width: @tablet-width) {
     font-size: 20px;
   }
@@ -34,9 +37,11 @@
 
 .partnership__address {
   .arial;
+  .mp;
   color: black;
   font-size: 14px;
   line-height: 20px;
+  width: 140px;
 
   @media (min-width: @tablet-width) {
     font-size: 16px;
