--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -1,11 +1,34 @@
 .social {
   .ma;
-  width: 150px;
+  width: 280px;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  border-top: 1px solid #cdcdcd;
+  border-bottom: 1px solid #cdcdcd;
 }
 
 .social__link {
-  width: 50px;
+  width: 52px;
   height: 50px;
+  padding: 6px 0;
 }
+
+.social__link--vkontakte {
+  background-image: url("../img/m-vk.png");
+  background-repeat: no-repeat;
+  background-position: 11px 26px;
+
+}
+
+.social__link--instagram {
+  background-image: url("../img/m-insta.png");
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.social__link--facebook {
+  background-image: url("../img/m-fb.png");
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
