--- a/source/less/blocks/developers.less
+++ b/source/less/blocks/developers.less
@@ -1,8 +1,27 @@
 .developers {
   display: flex;
   justify-content: space-between;
+  padding-top: 30px;
+  padding-bottom: 22px;
 
   @media (min-width: @tablet-width) {
     min-width: 162px;
   }
+}
+
+.developers__item--text {
+  text-decoration: none;
+  color:@text-gray;
+  width: 140px;
+  .arial;
+  .mp;
+  font-size: 16px;
+  line-height: 16px;
+}
+
+.developers__item--logo {
+  background-image: url("../img/logo-htmlacademy.svg");
+  width: 27px;
+  height: 34px;
+  margin-top:-8px;
 }
