почти index tablet

--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -16,6 +16,7 @@
 
   @media (min-width: @tablet-width) {
     background-color: white;
+    border-top: 2px solid #f2f2f2;
   }
 }
 
@@ -31,6 +32,8 @@
   padding-bottom: 22px;
 
   @media (min-width: @tablet-width) {
+    padding-top: 44px;
+    padding-bottom: 64px;
     font-size: 60px;
     width: 708px;
   }
@@ -47,7 +50,9 @@
   padding-top: 25px;
 
   @media (min-width: @tablet-width) {
+    padding-top: 53px;
     background-color: white;
+    padding-bottom: 254px;
   }
 
   @media (min-width: @desktop-width) {
@@ -71,7 +76,7 @@
   .ma;
 
   @media (min-width: @tablet-width) {
-    width: 708px;
+    width: 768px;
     padding: 0 30px;
     background-color: white;
   }
@@ -86,6 +91,7 @@
 .example__cat-wrapper {
   @media (min-width: @tablet-width) {
     background-color: @bg-grey;
+    min-height: 462px;
   }
 }
 
@@ -99,6 +105,7 @@
   @media (min-width: @tablet-width) {
     width: 708px;
     padding: 0 30px;
+    position: relative;
   }
 
   @media (min-width: @desktop-width) {
@@ -115,6 +122,22 @@
   border-radius: 2px;
   position: relative;
   box-sizing: border-box;
+
+  @media (min-width: @tablet-width) {
+    width: 162px;
+    height: 73px;
+  }
+
+}
+.example__result--mass {
+  @media (min-width: @tablet-width) {
+    margin-right: 42px;
+  }
+}
+.example__result--days {
+  @media (min-width: @tablet-width) {
+    margin-right: auto;
+  }
 }
 
 .example__text {
@@ -133,14 +156,16 @@
   font-size: 12px;
   line-height: 12px;
   text-align: center;
+
   @media (min-width: @tablet-width) {
+    padding: 0;
     background-color: white;
     font-size: 14px;
     line-height: 14px;
-  }
-
-  @media (min-width: @tablet-width) {
-    background-color: @bg-grey;
+    width: 140px;
+    white-space: nowrap;
+    top: 63px;
+    right: 9px;
   }
 }
 
@@ -148,12 +173,38 @@
   display: block;
   height: 244px;
   padding-bottom: 30px;
+  background-image: url("../img/before-mobile@1x.png");
+  background-repeat: no-repeat;
+  width: 320px;
+
+  @media (min-width: @tablet-width) {
+    position: absolute;
+    background-image: url("../img/before-after.png");
+    background-repeat: no-repeat;
+    width: 636px;
+    height: 517px;
+    top: -169px;
+    left: 45px;
+  }
 }
 
 .example__after {
   display: none;
   height: 244px;
   padding-bottom: 30px;
+  background-image: url("../img/after-mobile@1x.png");
+  background-repeat: no-repeat;
+  width: 320px;
+
+  @media (min-width: @tablet-width) {
+    position: absolute;
+    background-image: url("../img/before-after.png");
+    background-repeat: no-repeat;
+    width: 636px;
+    height: 517px;
+    top: -169px;
+    left: 45px;
+  }
 }
 
 .example_switch:checked ~ .example__before {
@@ -173,6 +224,7 @@
   width: 279px;
 
   @media (min-width: @tablet-width) {
+    width: 700px;
     font-size: 16px;
     line-height: 24px;
   }
@@ -206,8 +258,13 @@
   .mp;
   padding-top: 34px;
   text-align: center;
+
   @media (min-width: @tablet-width) {
+    padding-top: 5px;
     font-size: 20px;
+    line-height: 30px;
+    width: 175px;
+    text-align: right;
   }
 }
 
@@ -231,7 +288,10 @@
   align-items: center;
   padding-bottom: 35px;
 
-
+  @media (min-width: @tablet-width) {
+    padding-top: 367px;
+    width: 570px;
+  }
 }
 .example__slider-bar {
   position:relative;
@@ -240,18 +300,46 @@
   width: 84px;
   height: 14px;
   background-color: white;
-  border-radius: 6px;
   border: 1px solid #cdcdcd;
+  border-radius: 6px;
   margin-left: 3px;
-  &::before {
-    position: absolute;
-    content: "";
-    width: 35px;
+
+  @media (min-width: @tablet-width) {
+    border:none;
+    background-color: #cdcdcd;
+    width: 428px;
     height: 6px;
-    background-color: @button-green;
-    border-radius: 3px;
-    top: 3px;
-    left: 5px;
   }
 }
 
+.example__slider-bar small {
+  position: absolute;
+  content: "";
+  width: 35px;
+  height: 6px;
+  background-color: @button-green;
+  border-radius: 3px;
+  top: 3px;
+  left: 5px;
+
+  @media (min-width: @tablet-width) {
+    width: 34px;
+    height: 34px;
+    border-radius: 40px;
+    background-color: white;
+    box-shadow: 0 0 3px black;
+    top: -13px;
+    left: 197px;
+    &::before {
+      position: absolute;
+      content: "";
+      width: 8px;
+      height: 8px;
+      border-radius: 4px;
+      background-color: @button-green;
+      top: 13px;
+      left: 13px;
+
+    }
+    }
+  }
