--- a/source/less/blocks/partnership.less
+++ b/source/less/blocks/partnership.less
@@ -11,9 +11,11 @@
   .ma;
   padding-top: 28px;
   padding-bottom: 26px;
+
   @media (min-width: @tablet-width) {
-    width: 708px;
-    padding: 0 30px;
+    padding: 0;
+    width: 627px;
+    padding-top: 65px;
   }
 
   @media (min-width: @desktop-width) {
