--- a/source/less/blocks/targets.less
+++ b/source/less/blocks/targets.less
@@ -120,10 +120,24 @@
     position: absolute;
     content: "";
     background-image: url("../img/icon-slim-mobile.png");
+    background-size: cover;
     width: 50px;
     height: 53px;
     top: 21px;
     left: 22px;
+  }
+
+  @media (min-width: @tablet-width) {
+    &::before {
+      position: absolute;
+      content: "";
+      background-image: url("../img/icon-slim-mobile.png");
+      background-size: cover;
+      width: 200px;
+      height: 212px;
+      top: 80px;
+      left: 447px;
+    }
   }
 }
 
@@ -132,10 +146,24 @@
     position: absolute;
     content: "";
     background-image: url("../img/icon-mass-mobile.png");
+    background-size: cover;
     width: 67px;
     height: 50px;
-    top: 24px;
+    top: 23px;
     left: 14px;
+  }
+
+  @media (min-width: @tablet-width) {
+    &::before {
+      position: absolute;
+      content: "";
+      background-image: url("../img/icon-mass-mobile.png");
+      background-size: cover;
+      width: 268px;
+      height: 200px;
+      top: 92px;
+      left: 413px;
+    }
   }
 }
 
