--- a/source/less/blocks/product-description.less
+++ b/source/less/blocks/product-description.less
@@ -35,9 +35,13 @@
   position: relative;
 
   @media (min-width: @tablet-width) {
-    background-color: @bg-grey;
+    .mp;
+    padding-right: 78px;
+    padding-top: 114px;
+    box-sizing: border-box;
     width: 324px;
-    min-height: 286px;
+    min-height: 285px;
+    margin-bottom: 33px;
     font-size: 16px;
     line-height: 24px;
   }
@@ -50,7 +54,13 @@
   }
 }
 
-.product-description__item:nth-child(4n) {
+.product-description__item:nth-child(3) ,
+.product-description__item:nth-child(4) {
+  @media (min-width: @tablet-width) {
+    margin-bottom: 0;
+  }
+}
+.product-description__item:nth-child(4) {
   @media (min-width: @desktop-width) {
     margin-right: 0;
   }
@@ -67,7 +77,8 @@
   @media (min-width: @tablet-width) {
     font-size: 60px;
     line-height: 60px;
-
+    padding-top: 15px;
+    padding-bottom: 70px;
   }
 }
 
@@ -84,6 +95,33 @@
     left: 0;
     top:7px;
   }
+
+  @media (min-width: @tablet-width) {
+    &::before {
+      position: absolute;
+      content: "";
+      background-image: url("../img/advantage-leaf@1x.png");
+      background-color: @button-green;
+      background-position: center;
+      width: 80px;
+      height: 80px;
+      background-repeat: no-repeat;
+      left: 0;
+      top: 0;
+    }
+
+    &::after {
+      z-index: -1;
+      position: absolute;
+      content: "1";
+      .regular;
+      color: #f2f2f2;
+      font-size: 281px;
+      line-height: 281px;
+      top: -38px;
+      left: 117px;
+    }
+  }
 }
 
 .product-description__item--powder {
@@ -98,6 +136,33 @@
     background-repeat: no-repeat;
     left: 0;
     top:6px;
+  }
+
+  @media (min-width: @tablet-width) {
+    &::before {
+      position: absolute;
+      content: "";
+      background-image: url("../img/advantage-powder@1x.png");
+      background-color: @button-green;
+      background-position: center;
+      width: 80px;
+      height: 80px;
+      background-repeat: no-repeat;
+      left: 0;
+      top: 0;
+    }
+
+    &::after {
+      z-index: -1;
+      position: absolute;
+      content: "2";
+      .regular;
+      color: #f2f2f2;
+      font-size: 281px;
+      line-height: 281px;
+      top: -38px;
+      left: 112px;
+    }
   }
 }
 
@@ -114,6 +179,33 @@
     left: 0;
     top:6px;
   }
+
+  @media (min-width: @tablet-width) {
+    &::before {
+      position: absolute;
+      content: "";
+      background-image: url("../img/advantage-dining@1x.png");
+      background-color: @button-green;
+      background-position: center;
+      width: 80px;
+      height: 80px;
+      background-repeat: no-repeat;
+      left: 0;
+      top: 0;
+    }
+
+    &::after {
+      z-index: -1;
+      position: absolute;
+      content: "3";
+      .regular;
+      color: #f2f2f2;
+      font-size: 281px;
+      line-height: 281px;
+      top: -38px;
+      left: 114px;
+    }
+  }
 }
 
 .product-description__item--month {
@@ -128,5 +220,32 @@
     background-repeat: no-repeat;
     left: 0;
     top:6px;
+  }
+
+  @media (min-width: @tablet-width) {
+    &::before {
+      position: absolute;
+      content: "";
+      background-image: url("../img/advantage-clock@1x.png");
+      background-color: @button-green;
+      background-position: center;
+      width: 80px;
+      height: 80px;
+      background-repeat: no-repeat;
+      left: 0;
+      top: 0;
+    }
+
+    &::after {
+      z-index: -1;
+      position: absolute;
+      content: "4";
+      .regular;
+      color: #f2f2f2;
+      font-size: 281px;
+      line-height: 281px;
+      top: -38px;
+      left: 114px;
+    }
   }
 }
