--- a/source/less/blocks/developers.less
+++ b/source/less/blocks/developers.less
@@ -6,6 +6,11 @@
 
   @media (min-width: @tablet-width) {
     min-width: 162px;
+    padding: 0;
+    padding-top: 27px;
+  }
+  @media (min-width: @desktop-width) {
+    padding-top: 12px;
   }
 }
 
@@ -17,6 +22,7 @@
   .mp;
   font-size: 16px;
   line-height: 16px;
+  margin-right: -2px;
 }
 
 .developers__item--logo {
