--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -12,21 +12,32 @@
 
 
   @media (min-width: @tablet-width) {
-    width: 708px;
+    box-sizing: border-box;
+    width: 768px;
     padding: 0 30px;
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    min-height: 150px;
   }
 
   @media (min-width: @desktop-width) {
-    width: 1220px;
-    padding: 0 40px;
+    width: 1440px;
+    padding: 0 110px;
   }
 }
 
 .page-footer__map-wrapper {
   width: 100vw;
   height: 362px;
+
+  @media (min-width: @tablet-width) {
+    height: 397px;
+  }
+
+  @media (min-width: @desktop-width) {
+    height: 399px;
+  }
 }
 
 .page-footer__logo {
@@ -37,4 +48,8 @@
   padding-top: 40px;
   padding-bottom: 30px;
 
+  @media (min-width: @tablet-width) {
+    .mp;
+    padding-right: 29px;
+  }
 }
