--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -11,7 +11,8 @@
   }
 
   @media (min-width: @desktop-width) {
-    width: 1220px;
+    width: 1440px;
+    padding: 0 110px;
     position: relative;
     z-index: 2;
   }
@@ -26,7 +27,10 @@
 
   @media (min-width: @tablet-width) {
     min-height: 110px;
+  }
 
+  @media (min-width: @desktop-width) {
+    min-height: 172px;
   }
 }
 
