--- a/source/less/blocks/product-description.less
+++ b/source/less/blocks/product-description.less
@@ -51,6 +51,7 @@
     width: 245px;
     min-height: 228px;
     margin-right: 80px;
+    padding-top: 112px;
   }
 }
 
@@ -79,6 +80,11 @@
     line-height: 60px;
     padding-top: 15px;
     padding-bottom: 70px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-top: 73px;
+    padding-bottom: 72px;
   }
 }
 
