--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -9,7 +9,7 @@
 
   @media (min-width: @desktop-width) {
     background: linear-gradient(to right, rgb(255, 255, 255) 0%, rgb(255, 255, 255) 50%, rgb(104, 172, 63) 49.9%, rgb(104, 172, 63) 100%);
-    margin-top: -110px;
+    margin-top: -172px;
   }
 }
 
@@ -61,8 +61,8 @@
     background-image: url("../img/index-can-desktop.png");
     width: 552px;
     height: 499px;
-    margin-top: 150px;
-    margin-left: 550px;
+    margin-top: 142px;
+    margin-left: 530px;
   }
 }
 
@@ -86,6 +86,12 @@
     padding-top: 30px;
     text-indent: 0;
   }
+
+  @media (min-width: @desktop-width) {
+    width: 416px;
+    padding-top:224px;
+    padding-left: 160px;
+  }
 }
 
 .promo__slogan {
@@ -107,6 +113,11 @@
     width: 295px;
     padding-left: 80px;
     padding-top: 42px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-top: 39px;
+    padding-left: 155px;
   }
 }
 
@@ -131,5 +142,9 @@
     font-size: 20px;
     margin-top: 43px;
     margin-left: 88px;
+  }
+  @media (min-width: @desktop-width) {
+    margin-top: 53px;
+    margin-left: 159px;
   }
 }
