начато fначат form

--- a/source/less/blocks/page-form.less
+++ b/source/less/blocks/page-form.less
@@ -1,7 +1,7 @@
 .page-form {
-  width: 280px;
-  padding: 0 20px;
+  width: 320px;
   margin: 0 auto;
+  box-sizing: border-box;
 
   @media (min-width: @tablet-width) {
     width: 708px;
@@ -21,6 +21,10 @@
   color: black;
   font-size: 36px;
   line-height: 60px;
+  .mp;
+  padding: 0 20px;
+  padding-top: 15px;
+  padding-bottom:1;
 
   @media (min-width: @tablet-width) {
     font-size: 60px;
@@ -33,6 +37,10 @@
   .uppercase;
   font-size: 14px;
   line-height: 18px;
+  .mp;
+  width: 229px;
+  padding: 0 20px;
+  padding-top: 25px;
 
   @media (min-width: @tablet-width) {
     font-size: 20px;
