--- a/source/less/blocks/form-cat-info.less
+++ b/source/less/blocks/form-cat-info.less
@@ -1,7 +1,15 @@
+.form-cat-info {
+  border-bottom: 1px solid #cdcdcd;
+  padding-bottom: 14px;
+}
+
 .form-cat-info__item {
   width: 280px;
   height: 60px;
   .ma;
+  display: flex;
+  align-items: center;
+
 
   @media (min-width: @tablet-width) {
     width: 631px;
@@ -11,4 +19,14 @@
     width: 570px;
     margin: 0;
   }
+}
+.form-cat-info__item input {
+  width: 100%;
+  .regular;
+  .uppercase;
+  color: black;
+  font-size: 16px;
+  line-height: 39px;
+  margin-left: 15px;
+  padding-left: 13px;
 }
