--- a/source/less/blocks/selection.less
+++ b/source/less/blocks/selection.less
@@ -1,7 +1,7 @@
 .selection__wrapper-top {
   display: flex;
   flex-wrap: wrap;
-
+  padding-top: 31px;
   @media (min-width: @desktop-width) {
     display: flex;
     justify-content: space-between;
@@ -17,7 +17,7 @@
   color: black;
   font-size: 16px;
   line-height: 18px;
-
+  white-space: nowrap;
   @media (min-width: @tablet-width) {
     font-size: 20px;
     line-height: 20px;
