--- a/source/less/blocks/form-cat-info.less
+++ b/source/less/blocks/form-cat-info.less
@@ -11,6 +11,7 @@
   align-items: center;
 
 
+
   @media (min-width: @tablet-width) {
     width: 631px;
   }
@@ -29,4 +30,6 @@
   line-height: 39px;
   margin-left: 15px;
   padding-left: 13px;
+  border: 1px solid #e6e6e6;
+  color: #444444;
 }
