--- a/source/less/blocks/form-targets.less
+++ b/source/less/blocks/form-targets.less
@@ -1,8 +1,11 @@
-.form-targets__item {
-  width: 280px;
-  height: 34px;
-  .ma;
-
+.form-targets {
+  position: relative;
+  width: 320px;
+  padding: 0 20px;
+  box-sizing: border-box;
+  padding-top: 14px;
+  padding-bottom: 14px;
+  border-bottom: 1px solid #cdcdcd;
   @media (min-width: @tablet-width) {
     width: 631px;
   }
@@ -12,3 +15,44 @@
     margin: 0;
   }
 }
+
+.form-targets input {
+  .visually-hidden;
+}
+
+.form-targets__item {
+  display: block;
+  width: 280px;
+  height:43px;
+  box-sizing: border-box;
+  line-height:42px;
+  padding-left: 45px;
+  position: relative;
+}
+
+.form-targets__item::before {
+  position: absolute;
+  content: "";
+  width: 28px;
+  height: 28px;
+  border-radius: 40px;
+  background-color: white;
+  box-shadow: 0 0 1px black;
+  top: 6px;
+  left: 1px;
+}
+#toggle1:checked ~ .form-targets__item--1 ,
+#toggle2:checked ~ .form-targets__item--2 ,
+#toggle3:checked ~ .form-targets__item--3 {
+  &::after{
+      position: absolute;
+      content: "";
+      width: 12px;
+      height: 12px;
+      border-radius: 12px;
+      background-color: @button-green;
+      top: 14px;
+      left: 9px;
+  }
+}
+
