--- a/source/less/blocks/page-form.less
+++ b/source/less/blocks/page-form.less
@@ -4,8 +4,9 @@
   box-sizing: border-box;
 
   @media (min-width: @tablet-width) {
-    width: 708px;
+    width: 768px;
     padding: 0 30px;
+    box-sizing: border-box;
     margin: 0 auto;
   }
 
@@ -28,6 +29,8 @@
 
   @media (min-width: @tablet-width) {
     font-size: 60px;
+    padding-top: 31px;
+    padding-left: 0;
   }
 }
 
@@ -45,5 +48,8 @@
   @media (min-width: @tablet-width) {
     font-size: 20px;
     line-height: 30px;
+    width: 330px;
+    padding-top: 55px;
+    padding-left: 40px;
   }
 }
